new version without node