@@ -26,24 +26,46 @@ import ru.ani.web.services.JwtUtil;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Spring Security configuration class for securing the web application.
+ * This class configures:
+ * <ul>
+ *   <li>User details service for authentication (loading users from the database).</li>
+ *   <li>JWT filter for handling JWT tokens.</li>
+ *   <li>CORS settings for cross-origin requests.</li>
+ *   <li>Password encoding using BCrypt.</li>
+ *   <li>Authentication manager configuration.</li>
+ * </ul>
+ */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
 
-    private final UserRepository userRepository;
-    private final JwtUtil jwtUtil;
+    private final UserRepository userRep;
+    private final JwtUtil jwtUtilityity;
 
+    /**
+     * Constructor for injecting dependencies.
+     *
+     * @param userRep      the repository used to fetch user information from the database.
+     * @param jwtTokenUtil utility for handling JWT tokens.
+     */
     @Autowired
-    public SecurityConfiguration(UserRepository userRepository, JwtUtil jwtTokenUtil) {
-        this.userRepository = userRepository;
-        this.jwtUtil = jwtTokenUtil;
+    public SecurityConfiguration(UserRepository userRep, JwtUtil jwtTokenUtil) {
+        this.userRep = userRep;
+        this.jwtUtilityity = jwtTokenUtil;
     }
 
-    //загрузка пользователей из бд
+    /**
+     * Defines a {@link UserDetailsService} bean for loading user-specific data.
+     * If the user is not found in the database, a {@link UsernameNotFoundException} is thrown.
+     *
+     * @return an instance of {@link UserDetailsService} to load the user.
+     */
     @Bean
     public UserDetailsService userDetailsService() {
         return username -> {
-            User user = userRepository.findByUsername(username);
+            User user = userRep.findByUsername(username);
             if (user == null) {
                 throw new UsernameNotFoundException(username);
             }
@@ -51,48 +73,92 @@ public class SecurityConfiguration {
         };
     }
 
-
+    /**
+     * Configures the security filter chain for handling HTTP requests.
+     * Main configurations include:
+     * <ul>
+     *   <li>Disabling CSRF protection (not needed for a REST API using JWT tokens).</li>
+     *   <li>Configuring CORS using {@link #corsConfigurationSource()}.</li>
+     *   <li>Allowing unauthenticated access to the endpoints /api/login and /api/register.</li>
+     *   <li>Requiring authentication for all other requests.</li>
+     *   <li>Adding the custom {@link JwtFilter} before the standard authentication filter.</li>
+     * </ul>
+     *
+     * @param http the HttpSecurity configuration.
+     * @return the configured {@link SecurityFilterChain}.
+     * @throws Exception if an error occurs during configuration.
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-                .csrf(AbstractHttpConfigurer::disable) //В REST API с JWT-токенами (которые передаются в заголовках, а не куках) CSRF обычно не требуется
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))//Подключает кастомную CORS-конфигурацию
+                .csrf(AbstractHttpConfigurer::disable) // CSRF is disabled for REST APIs using JWT tokens.
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Applies custom CORS configuration.
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/login", "/api/register").permitAll() //доступны без аутентификации
-                        .anyRequest().authenticated() //Все остальные требуют аутентификации
-                        // СНАЧАЛА СПЕЦИФИЧНЫЕ ПОТОМ ОБЩИЕ ПРАВИЛА
+                        .requestMatchers("/api/login", "/api/register").permitAll() // Allow these endpoints without authentication.
+                        .anyRequest().authenticated() // All other endpoints require authentication.
                 )
-                .addFilterBefore(new JwtFilter(jwtUtil, userDetailsService()), UsernamePasswordAuthenticationFilter.class) //Кастомный фильтр JwtFilter включается в цепочку фильтров перед стандартным фильтром аутентификации
+                .addFilterBefore(new JwtFilter(jwtUtilityity, userDetailsService()), UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
+    /**
+     * Defines the AuthenticationManager bean using the provided {@link AuthenticationConfiguration}.
+     *
+     * @param authenticationConfiguration the configuration for authentication.
+     * @return an instance of {@link AuthenticationManager}.
+     * @throws Exception if an error occurs while creating the AuthenticationManager.
+     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    //хэширование паролей
+    /**
+     * Defines a bean for password encoding using BCrypt.
+     *
+     * @return an instance of {@link PasswordEncoder} using BCrypt.
+     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    /**
+     * Configures the {@link AuthenticationManagerBuilder} to prevent erasing credentials after authentication.
+     * Setting {@code eraseCredentials(false)} retains credentials, which might be useful for logging or auditing scenarios.
+     *
+     * @param builder the AuthenticationManagerBuilder used to build the authentication manager.
+     */
     @Autowired
     public void configure(AuthenticationManagerBuilder builder) {
         builder.eraseCredentials(false);
     }
 
+    /**
+     * Configures the {@link CorsConfigurationSource} for handling cross-origin requests.
+     * The settings include:
+     * <ul>
+     *   <li>Allowed origin: http://localhost:80</li>
+     *   <li>Allowed methods: GET, POST</li>
+     *   <li>Allowed headers: Authorization, Content-Type</li>
+     *   <li>Exposed headers: Authorization</li>
+     *   <li>Allow credentials: true</li>
+     * </ul>
+     * These settings apply to all endpoints (/**).
+     *
+     * @return an instance of {@link CorsConfigurationSource} with the specified settings.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:80")); //Домен, с которого разрешены кросс-доменные запросы
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST")); //Какие типы запросов разрешены, PUT, DELETE, PATCH — запрещены
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); //Какие заголовки может отправлять клиент (Authorization: Для JWT-токенов.Content-Type: Для указания типа данных (JSON, XML и т.д.))
-        configuration.setExposedHeaders(List.of("Authorization")); //Какие заголовки сервера будут доступны клиенту
-        configuration.setAllowCredentials(true); //Разрешает: Передачу куки и сессионных данных, Использование авторизационных заголовков
+        configuration.setAllowedOrigins(List.of("http://localhost:80"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); //настройки CORS ко всем эндпоинтам (/**)
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
